package com.balitechy.spacewar.main.Interfaces;

import java.awt.Canvas;
import java.awt.Graphics;
import java.io.IOException;

public interface BackgroundGraphic {
    void render(Graphics g, Canvas c) throws IOException;
}
