package com.balitechy.spacewar.main.Interfaces;

import java.awt.Graphics;

public interface BulletGraphic {
    void render(Graphics g, double x, double y);
}
