package com.balitechy.spacewar.main.Interfaces;

import java.awt.Graphics;

public interface PlayerGraphic {
    void render(Graphics g, double x, double y);
}